kubernetes/docker-desktop/docker-registry-htpasswd.yaml
kind: Service
apiVersion: v1
metadata:
  name: docker-registry
spec:
  type: LoadBalancer
  ports:
    - port: 5000
  selector:
    app: docker-registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: docker-auth-volume
            mountPath: /auth
          - name: docker-image-store
            mountPath: /var/lib/registry
      volumes:
      - name: docker-auth-volume
        configMap:
          name: docker-auth
          items:
          - key: htpasswd
            path: htpasswd
      - name: docker-image-store
        persistentVolumeClaim:
          claimName: docker-registry-pvc
