kubernetes/docker-desktop/genome.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: genome
spec:
  rules:
  - host: localtest.me
    http:
      paths:
      - backend:
          serviceName: genome
          servicePort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genome
  labels:
    app: genome
spec:
  selector:
    matchLabels:
      app: genome
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: genome
        tier: frontend
    spec:
      containers:
      - image: genome:latest
        imagePullPolicy: Never
        name: genome
        ports:
        - containerPort: 8000
          name: genome
        volumeMounts:
        - name: genome-persistent-storage
          mountPath: /db
        - name: docker-socket
          mountPath: /var/run/docker.sock
        - name: local-volume
          mountPath: /local
        - name: remote-volume
          mountPath: /remote
        - name: shared-volume
          mountPath: /shared
      volumes:
      - name: genome-persistent-storage
        persistentVolumeClaim:
          claimName: genome-pvc
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
      - name: local-volume
        hostPath:
          path: /Users/chazapis/Source/FORTH/integration/genome/local
      - name: remote-volume
        hostPath:
          path: /Users/chazapis/Source/FORTH/integration/genome/remote
      - name: shared-volume
        hostPath:
          path: /Users/chazapis/Source/FORTH/integration/genome/shared
