kubernetes/docker-desktop/karvdash-maw.yaml
apiVersion: v1
kind: Service
metadata:
  name: karvdash-maw
  labels:
    app: karvdash-maw
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: karvdash-maw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karvdash-maw
  labels:
    app: karvdash-maw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karvdash-maw
  template:
    metadata:
      name: karvdash-maw
      labels:
        app: karvdash-maw
    spec:
      containers:
        - name: karvdash-maw
          image: karvdash-maw:latest
          imagePullPolicy: Never
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: karvdash-maw
  labels:
    app: karvdash-maw
webhooks:
  - name: karvdash-maw.default.svc.cluster.local
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURqVENDQW5XZ0F3SUJBZ0lVZG9FcmlJakU4UkpkSEVJN0xrMVBuejlRa1prd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF4TUthM1ZpWlhKdVpYUmxjekFlRncweU1EQTBNVFV4TWpReE1EQmFGdzB5TVRBMApNVFV4TWpReE1EQmFNQ014SVRBZkJnTlZCQU1UR0d0aGNuWmtZWE5vTFcxaGR5NWtaV1poZFd4MExuTjJZekNDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTXFvL01MR2pTamsvdXMxcEgvcmdudnUKZ0ZkRjRTN3IwaUpJMWxObGJGcWtCQSt6WHdZUVp6bUdtUG9sNG1nMzNOU0JRVkljai9rUGdNcHdDRUFUMWVxTQpNRmJicTFaYis1 [...]
      service:
        name: karvdash-maw
        namespace: default
        path: "/webhooks/mutate"
    rules:
      - operations: ["CREATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods", "deployments"]
    namespaceSelector:
      matchLabels:
        karvdash: enabled
    failurePolicy: Fail
